--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+    "engines":{
+      "node": "0.10.x",
+      "npm": "1.4.x"
+    },
   "dependencies": {
     "express": "~4.2.0",
     "static-favicon": "~1.0.0",
@@ -13,5 +17,8 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0"
+  },
+  "devDependencies": {
+    "bower": "^1.3.9"
   }
 }
