--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "jade": "~1.3.0",
+    "mongoose": "^3.8.11",
+    "stylus": "~0.45.0"
   },
   "devDependencies": {
     "bower": "^1.3.9"
