--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "FirstNodeProject",
   "version": "0.0.1",
   "private": true,
+    "main": "index.js",
   "scripts": {
     "start": "node ./bin/www"
   },
